<resources>
    <string name="app_name">HME</string>
    <string name="app_Header">Haver Middle East FZE</string>
    <string name="visa_log">Visa Log</string>
    <string name="expanse_sheet">Expanse Sheet</string>
    <string name="settings">Settings</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>
    <string name="travel_start">Travel Start</string>
    <string name="travel_end">Travel End</string>
    <string name="day_start_time">08:00</string>
    <string name="work_start">Work Start</string>
    <string name="work_end">Work End</string>
    <string name="day_end_time">17:00</string>
    <string name="break_">Break Duration</string>
    <string name="add_time">Add New Date</string>
    <string name="customer">Customer</string>
    <string name="HME_code">HME Code</string>
    <string name="visa_country">Visa Country</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="app_ver">1.4.3</string>
    <string name="user_name">User Name</string>
    <string name="visa_log_reminder">Visa Log Reminder in Days</string>
    <string name="_30_days">30 Days</string>
    <string name="break_time_default">Default Break Time</string>
    <string name="now">Now</string>
    <string name="hb_logo">HB Logo</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_city">Customer City</string>
    <string name="customer_country">Customer Country</string>
    <string name="HMECodeExample">M20-xxxxx</string>
    <string name="machine_type">Machine Type</string>
    <string name="machine_type_example">RotoPacker</string>
    <string name="machine_number">Machine Number</string>
    <string name="machine_number_example">x-xxxxxx-xx-xx</string>
    <string name="work_description">Work Description</string>
    <string name="work_description_example">Commissioning</string>
    <string name="travel_distance">Travel distance in KM</string>
    <string name="_100">100</string>
    <string name="add_user_signature">Add User Signature</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="sign_below">Sign Below</string>
    <string name="signature">Signature</string>
    <string name="user_signature">User Signature</string>
    <string name="name_of_signer">Name of Signer</string>
    <string name="sign_sheet">Sign Sheet</string>
    <string name="engineering_manager_name">Engineering manager name</string>
    <string name="day">Day</string>
    <string name="travel">Travel</string>
    <string name="start">Start</string>
    <string name="work">Work</string>
    <string name="end">End</string>
    <string name="break__">Break</string>
    <string name="duration">duration</string>
    <string name="hours">Hours</string>
    <string name="distance">Distance</string>
    <string name="send_by_email">Send by Email</string>
    <string name="previous_time_sheets">previous Time Sheets</string>
    <string name="new_time_sheet">New Time Sheet</string>
    <string name="travel_dist">travel Dist</string>
    <string name="visa_reminder_time">Visa Reminder Time</string>
    <string name="_8">8</string>
    <string name="add_new_hme_code">Add New HME Code</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="add_new_date">Add new Date</string>
    <string name="today">Today</string>
    <string name="weekend_overtime">Over Time/Weekend</string>
    <string name="weekend_noWork">No work/Weekend</string>
    <string name="overtime">Over Time</string>
    <string name="IBAU_code">IBAU SO</string>
    <string name="ibau_user">IBAU User</string>
    <string name="IBAU_code_example">kn0000000</string>
    <string name="edit">Edit</string>
    <string name="data_preview">Preview data</string>
    <string name="customer_list">Customer List</string>
    <string name="HME_code_list">HME Mission Code List</string>
    <string name="IBAU_code_list">IBAU Code List</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="view_pdf">View PDF</string>
    <string name="calendar">Calendar</string>
    <string name="back">Back</string>
    <string name="next">next</string>
    <string name="clear_after_adding_date">Clear after adding date</string>
    <string name="travel_day">Travel Day</string>
    <string name="ExpiryDate">Expiry Date</string>
    <string name="build_version">Build Version</string>
    <string name="save">Save</string>
    <string name="add_ibau_so">add_ibau_so</string>
    <string name="without_signature">Without sign</string>
    <string name="visa___country">Visa \nCountry</string>
    <string name="remaining___days">Remaining\nDays</string>
    <string name="enable">Enable</string>
    <string name="hide_completed_dates">Hide completed dates</string>
    <string name="travel_hours">Travel Time</string>
    <string name="over_time_hours">Over Time</string>
    <string name="work_hours">Work Time</string>
</resources>