<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.newHMECode.NewHMECodeActivity">


    <LinearLayout
        android:id="@+id/lo_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/customer" />

        <Spinner
            android:id="@+id/sp_customer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="6"
            android:ems="10"
            android:entries="@android:array/postalAddressTypes"
            android:inputType="text" />
        </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/HME_code"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_HME_code"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_HME_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/HMECodeExample"
        android:maxLength="25"
        android:inputType="text|textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/et_machine_number"
        app:layout_constraintTop_toBottomOf="@id/lo_customer"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/machine_type"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_machine_type"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_machine_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/machine_type_example"
        android:maxLength="25"
        android:inputType="text|textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/et_machine_number"
        app:layout_constraintTop_toBottomOf="@id/et_HME_code"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_machine_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/machine_number"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_machine_number"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_machine_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/machine_number_example"
        android:inputType="text|textCapSentences"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_machine_number"
        app:layout_constraintTop_toBottomOf="@id/et_machine_type"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/work_description"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_work_description"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_work_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/work_description_example"
        android:maxLength="60"
        android:inputType="text|textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_machine_number"
        app:layout_constraintTop_toBottomOf="@id/et_machine_number"
        android:importantForAutofill="no" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHMECode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_work_description"
        app:layout_constraintVertical_bias="0.0" />




</androidx.constraintlayout.widget.ConstraintLayout>